# medyia

./: README.md  index.html  justfile  package-lock.json  package.json
src/: App.css  App.tsx  commands.ts  utils.tsx
src-tauri/: Cargo.toml  Entitlements.plist  justfile  tauri.conf.json  tauri.debug.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: apple-music_metadata.js  base_monitor.js  brain-fm_metadata.js  soundcloud_metadata.js  youtube_metadata.js
src-tauri/src/: commands.rs  lib.rs  main.rs  media_bridge.rs  media_sources.rs  memory.rs  osx_utils.rs  playback.rs  run.rs  session.rs  tabs_state.rs  utils.rs  webview_manager.rs
src-tauri/src/state/: app_state.rs  media_state.rs  mod.rs  tabs_state.rs
src/components/: Landing.tsx  MediaSource.css  MediaSource.tsx  MediaSourceBar.css  MediaSourceBar.tsx  TabBar.tsx  TabItem.tsx
