[package]
name = "medyia"
version = "0.1.0"
description = "A macOS web-based media player"
authors = ["Dylan Owen"]
edition = "2024"

[lib]
name = "medyia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"


souvlaki = { version = "0.8", default-features = false }
tokio = { version = "1", features = ["time"] }
url = "2"
once_cell = "1.21.3"

rand = "0.10"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1.0"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
